# nt-conditionals

./: LICENSE.md  README.md  pyproject.toml
data/: nt-conditionals-na27.json  nt-conditionals-sblgnt.json  nt-non-conditionals-na27.json  nt-non-conditionals-sblgnt.json
data/md/: nt-conditionals-NA27.md  nt-conditionals-SBLGNT.md  nt-non-conditionals-NA27.md  nt-non-conditionals-SBLGNT.md
data/raw/2023-11-24/: CanIL Analysis of NT Conditionals by book220831.xlsx  Database of NT Conditionals Unified with Greek Text.xlsx  Database of Non-conditional uses of εἰ and ἐάν-with Greek.xlsx
data/raw/2023-12-02/: Categories used in the database.docx  Database of NT Conditionals Unified with Greek Text.xlsx  Database of Non-conditional uses of EI and EAN-with Greek.xlsx
src/: diff_match_patch.py  process_conditionals.py  process_non_conditionals.py  render_as_markdown.py
src/shared/: shared_classes.py
